2023-10-29T08:15:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6682182898 # 1327
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-29
* notice: last 14d: unq all: 3 43
* notice: prev accum: outdated-unq outdated-all / unq all: 547 926 / 567 970
* notice: next accum: outdated-unq outdated-all / unq all: 547 926 / 568 971
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -2 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-15 2023-10-29]

2023-10-28T16:15:41Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6677961240 # 1325
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-28
* notice: last 14d: unq all: 3 44
* notice: prev accum: outdated-unq outdated-all / unq all: 546 924 / 567 969
* notice: next accum: outdated-unq outdated-all / unq all: 547 926 / 567 970
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-10-14] / [2023-10-28]

2023-10-28T08:15:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6675771189 # 1324
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-28
* notice: last 14d: unq all: 3 44
* notice: prev accum: outdated-unq outdated-all / unq all: 546 924 / 566 968
* notice: next accum: outdated-unq outdated-all / unq all: 546 924 / 567 969
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-14 2023-10-28]

2023-10-27T16:16:56Z: