@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-29T08:15:37Z",
-  "count_outdated" : 926,
-  "uniques_outdated" : 547,
-  "count" : 971,
+  "timestamp" : "2023-10-29T16:16:41Z",
+  "count_outdated" : 929,
+  "uniques_outdated" : 548,
+  "count" : 972,
   "uniques" : 568,
   "clones" : [
-    {
-      "timestamp": "2023-10-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 2, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-10-16T00:00:00Z",
       "count": 4,
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2023-10-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
